[package]
name = "opg"
description = "Rust OpenAPI docs generator"
version = "0.1.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
itertools = "0.9"
uuid = { version = "0.8", optional = true }
http = "0.2"

[dependencies.opg_proc]
path = "opg_proc"

[workspace]
members = ["opg_proc"]
