[package]
name = "opg"
description = "Rust OpenAPI 3.0 docs generator"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
license = "Apache-2.0"
version = "0.1.1"
repository = "https://github.com/Rexagon/opg"
keywords = ["openapi", "documentation", "generator"]
categories = ["encoding"]
include = ["src/**/*.rs", "README.md", "LICENSE"]
edition = "2018"

[dependencies]
http = "0.2"
opg_derive = { version = "=0.1.0", path = "../opg_derive" }
serde = { version = "1", features = ["derive"] }
either = "1.5"
uuid = { version = "0.8", optional = true }
chrono = { version = "0.4", optional = true }

[dev-dependencies]
opg_derive = { version = "0.1", path = "../opg_derive" }

[features]
default = ["const_generics"]
const_generics = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
