[package]
name = "opg_derive"
description = "Rust OpenAPI 3.0 docs generator"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
license = "Apache-2.0"
version = "0.1.0"
repository = "https://github.com/Rexagon/opg"
keywords = ["openapi", "documentation", "generator"]
categories = ["encoding"]
include = ["src/**/*.rs", "README.md", "LICENSE"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["visit"] }
quote = "1.0"
proc-macro2 = "1.0"
either = "1.5"

[dev-dependencies]
opg = { version = "0.0", path = "../opg" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
