[package]
name = "opg_test_suite"
version = "0.0.0"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
edition = "2018"

[dependencies]
opg = { path = "../opg", features = [ "uuid", "chrono", "path_attr" ] }
opg_derive = { path = "../opg_derive" }

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
serde_yaml = "0.8"
serde_repr = "0.1"
